[gd_scene load_steps=8 format=3 uid="uid://bkn8dwvq4qx35"]

[ext_resource type="Theme" uid="uid://lndqrlgegpj8" path="res://UI/themes/base.tres" id="1_jfm1e"]
[ext_resource type="Script" uid="uid://b3j741xhcfc3" path="res://UI/pause_menu.gd" id="1_ltd3m"]
[ext_resource type="Texture2D" uid="uid://b7mq4j4wtyd14" path="res://assets/ui/apps/resume.png" id="3_0b5ob"]
[ext_resource type="Texture2D" uid="uid://xfk2k8c5paca" path="res://assets/ui/phone.png" id="3_03fe5"]
[ext_resource type="Texture2D" uid="uid://cv8u5jeuc081a" path="res://assets/ui/apps/checklist.png" id="4_pqlge"]
[ext_resource type="Texture2D" uid="uid://vpjxwlog5wan" path="res://assets/ui/phone_wallpaper.png" id="6_nben2"]
[ext_resource type="Script" uid="uid://dih36xx3cxd50" path="res://UI/checklist.gd" id="7_xv4gp"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jfm1e")
script = ExtResource("1_ltd3m")

[node name="Phone" type="TextureRect" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -315.0
offset_top = -344.0
offset_right = 306.0
offset_bottom = 301.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_03fe5")
stretch_mode = 5

[node name="Wallpaper" type="TextureRect" parent="."]
clip_children = 2
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -330.0
offset_right = 206.0
offset_bottom = 277.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_nben2")
stretch_mode = 4

[node name="HomeScreen" type="Control" parent="Wallpaper"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Gameplay" type="PanelContainer" parent="Wallpaper/HomeScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = 131.5
offset_right = 337.0
offset_bottom = 488.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Wallpaper/HomeScreen/Gameplay"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Resume" type="Button" parent="Wallpaper/HomeScreen/Gameplay/VBox"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Checklist")
button_mask = 0
text = "Resume"
icon = ExtResource("3_0b5ob")

[node name="Checklist" type="Button" parent="Wallpaper/HomeScreen/Gameplay/VBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../Resume")
focus_neighbor_bottom = NodePath("../Statistics")
text = "Checklist"
icon = ExtResource("4_pqlge")

[node name="Statistics" type="Button" parent="Wallpaper/HomeScreen/Gameplay/VBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../Checklist")
focus_neighbor_bottom = NodePath("../Go Home")
text = "Statistics"

[node name="Go Home" type="Button" parent="Wallpaper/HomeScreen/Gameplay/VBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../Statistics")
text = "Go Home"

[node name="Options" type="PanelContainer" parent="Wallpaper/HomeScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = 114.0
offset_right = 368.0
offset_bottom = 498.0
grow_horizontal = 2
grow_vertical = 2

[node name="Vbox" type="VBoxContainer" parent="Wallpaper/HomeScreen/Options"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Options" type="Button" parent="Wallpaper/HomeScreen/Options/Vbox"]
layout_mode = 2
focus_neighbor_top = NodePath(".")
text = "Options
"

[node name="Controls" type="Button" parent="Wallpaper/HomeScreen/Options/Vbox"]
layout_mode = 2
text = "Controls"

[node name="Title" type="Button" parent="Wallpaper/HomeScreen/Options/Vbox"]
layout_mode = 2
text = "Title Screen"

[node name="Quit" type="Button" parent="Wallpaper/HomeScreen/Options/Vbox"]
layout_mode = 2
focus_neighbor_bottom = NodePath(".")
text = "Quit
"

[node name="Checklist" type="Control" parent="Wallpaper"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_xv4gp")

[node name="ColorRect" type="ColorRect" parent="Wallpaper/Checklist"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.0
offset_top = -186.0
offset_right = 170.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.94902, 0.705882, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Wallpaper/Checklist"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -50.5
offset_right = 46.0
offset_bottom = 83.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "- ok this doesnt do anything sorry
- loam"

[node name="Area" type="RichTextLabel" parent="Wallpaper/Checklist"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.975
anchor_top = -1.025
anchor_right = 1.75
offset_left = -51.0
offset_top = -53.5
offset_right = 60.0
offset_bottom = -45.5
grow_horizontal = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 32
text = "National Park"

[connection signal="pressed" from="Wallpaper/HomeScreen/Gameplay/VBox/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Wallpaper/HomeScreen/Gameplay/VBox/Checklist" to="." method="_on_checklist_pressed"]
[connection signal="pressed" from="Wallpaper/HomeScreen/Gameplay/VBox/Go Home" to="." method="_on_return_to_mouseholm_pressed"]
[connection signal="pressed" from="Wallpaper/HomeScreen/Options/Vbox/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Wallpaper/HomeScreen/Options/Vbox/Quit" to="." method="_on_quit_pressed"]
